--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
-*, *:after, *:before {
-  box-sizing: border-box;
+body {
+  background: #eee;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#app {
+  position: relative;
+  width: 800px;
+  height: 500px;
+  background: #fff;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.1);
 }
 
 .Node {
@@ -7,6 +23,7 @@
   border: 1px solid #ddd;
   background: #fafafa;
   box-shadow: 0px 1px 2px rgba(0,0,0,.1);
+  box-sizing: border-box;
 }
 
 .Node.selected:after {
@@ -24,24 +41,4 @@
 .Draggable, .Resizable {
   height: 100%;
   width: 100%;
-}
-
-.App {
-  position: relative;
-  width: 800px;
-  height: 500px;
-  background: #fff;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.1);
-}
-
-body {
-  background: #eee;
-}
-
-#root {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
