--- a/src/canvas/resize-node.css
+++ b/src/canvas/resize-node.css
@@ -1,22 +1,18 @@
 .handle {
+  border-radius: 16px;
+  box-sizing: border-box;
+  cursor: url(../rotate-cursor.svg), auto;
   position: absolute;
-
-  margin: auto;
   z-index: 100;
+  width: 32px;
+  height: 32px;
 }
 
-.handleLeft::before,
-.handleTop::before,
-.handleBottom::before,
-.handleRight::before,
-.cornerTopRight::before,
-.cornerTopLeft::before,
-.cornerBottomLeft::before,
-.cornerBottomRight::before {
-  content: "";
+.resizeNode {
   position: absolute;
   background: #fff;
-  border: 1px solid #2196F3;
+  border: 1px solid #000;
+  box-sizing: border-box;
   height: 6px;
   width: 6px;
   top: 50%;
@@ -25,70 +21,74 @@
   margin-left: -3px;
 }
 
+.resizeNode::before {
+  content: "";
+  background: blue;
+  border-radius: 8px;
+  opacity: 0.5;
+  padding: 8px;
+  position: absolute;
+  top: -6px;
+  left: -6px;
+}
+
 .handleLeft {
-  left: 0;
-  margin-left: -10px;
+  left: -16px;
   top: 50%;
-  margin-top: -10px;
-  cursor: ew-resize;
+  margin-top: -16px;
 }
 
 .handleTop {
   left: 50%;
-  top: 0;
-  margin-left: -10px;
-  margin-top: -10px;
-  cursor: ns-resize;
+  top: -16px;
+  margin-left: -16px;
 }
 
 .handleBottom {
   left: 50%;
-  bottom: 0;
-  margin-left: -10px;
-  margin-bottom: -10px;
-  cursor: ns-resize;
+  bottom: -16px;
+  margin-left: -16px;
 }
 
 .handleRight {
   top: 50%;
-  right: 0;
-  margin-top: -10px;
-  margin-right: -10px;
-  cursor: ew-resize;
+  right: -16px;
+  margin-top: -16px;
 }
 
 .cornerTopLeft {
-  top: -10px;
-  left: -10px;
-  cursor: nwse-resize;
+  top: -16px;
+  left: -16px;
 }
 
 .cornerTopRight {
-  top: -10px;
-  right: -10px;
-  cursor: nesw-resize;
+  top: -16px;
+  right: -16px;
 }
 
 .cornerBottomLeft {
-  bottom: -10px;
-  left: -10px;
+  bottom: -16px;
+  left: -16px;
+}
+
+.cornerBottomRight {
+  bottom: -16px;
+  right: -16px;
+}
+
+.cornerTopRight .resizeNode,
+.cornerBottomLeft .resizeNode {
   cursor: nesw-resize;
 }
-
-.cornerBottomRight {
-  bottom: -10px;
-  right: -10px;
+.cornerTopLeft .resizeNode,
+.cornerBottomRight .resizeNode {
   cursor: nwse-resize;
 }
-
-.handleLeft,
-.handleTop,
-.handleBottom,
-.handleRight,
-.cornerTopRight,
-.cornerTopLeft,
-.cornerBottomLeft,
-.cornerBottomRight {
-  width: 20px;
-  height: 20px;
+.handleRight .resizeNode,
+.handleLeft .resizeNode {
+  cursor: ew-resize;
+}
+.handleTop .resizeNode,
+.handleBottom .resizeNode {
+  cursor: ns-resize;
 }
