--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,12 @@ body {
 }
 
 .Node {
-  position: absolute;
-  border: 1px solid #ddd;
   background: #fafafa;
+  border: 1px solid #ddd;
   box-shadow: 0px 1px 2px rgba(0,0,0,.1);
   box-sizing: border-box;
+  display: inline-block;
+  position: relative;
 }
 
 .Node.selected:after {
