--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,29 @@ body {
   pointer-events: none;
 }
 
-.Draggable, .Resizable {
+.Draggable, .Resizable, .Rotatable {
   height: 100%;
   width: 100%;
+}
+
+.rotateHandle {
+  background-color: #2196F3;
+  height: 1px;
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  width: 20px;
+}
+
+.rotateHandle::before {
+  content: "";
+  cursor: move;
+  background: #fff;
+  border: 1px solid #2196F3;
+  border-radius: 5px;
+  height: 8px;
+  right: -4px;
+  position: absolute;
+  margin-top: -4px;
+  width: 8px;
 }
