--- a/src/canvas/resize.css
+++ b/src/canvas/resize.css
@@ -9,14 +9,14 @@
   content: "";
   background: #fff;
   border: 1px solid #2196F3;
-  height: 6px;
+  box-sizing: border-box;
+  height: 9px;
   left: 50%;
   position: absolute;
-  margin-left: -3px;
-  margin-top: -3px;
+  margin-left: -4px;
+  margin-top: -4px;
   top: 50%;
-  width: 6px;
-  z-index: 100;
+  width: 9px;
 }
 
 .handleLeft {
