--- a/src/App.css
+++ b/src/App.css
@@ -14,13 +14,12 @@ body {
   position: relative;
   width: 800px;
   height: 500px;
-  background: #fff;
+  background: #fafafa;
   box-shadow: 0px 1px 2px rgba(0,0,0,.1);
 }
 
 .Node {
-  background: #fafafa;
-  border: 1px solid #ddd;
+  background: #CCD4DB;
   box-shadow: 0px 1px 2px rgba(0,0,0,.1);
   box-sizing: border-box;
   display: inline-block;
@@ -35,7 +34,7 @@ body {
   bottom: 0px;
   right: 0px;
   z-index: 99;
-  outline: 1px solid #2196F3;
+  outline: 2px solid #007CA5;
   pointer-events: none;
 }
 
@@ -45,23 +44,24 @@ body {
 }
 
 .rotateHandle {
-  background-color: #2196F3;
-  height: 1px;
+  background-color: #007CA5;
+  height: 2px;
+  margin-top: -1px;
   position: absolute;
-  right: -20px;
+  right: -45px;
   top: 50%;
-  width: 20px;
+  width: 45px;
 }
 
 .rotateHandle::before {
   content: "";
   cursor: move;
-  background: #fff;
-  border: 1px solid #2196F3;
-  border-radius: 5px;
-  height: 8px;
-  right: -4px;
+  background-color: #007CA5;
+  border: 2px solid white;
+  border-radius: 8px;
+  height: 10px;
+  right: -7px;
   position: absolute;
-  margin-top: -4px;
-  width: 8px;
+  margin-top: -7px;
+  width: 10px;
 }
