--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body {
   background: #eee;
 }
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 #root {
   width: 100vw;
   height: 100vh;
@@ -41,27 +45,4 @@ body {
 .Draggable, .Resizable, .Rotatable {
   height: 100%;
   width: 100%;
-}
-
-.rotateHandle {
-  background-color: #007CA5;
-  height: 2px;
-  margin-top: -1px;
-  position: absolute;
-  right: -45px;
-  top: 50%;
-  width: 45px;
-}
-
-.rotateHandle::before {
-  content: "";
-  cursor: crosshair;
-  background-color: #007CA5;
-  border: 2px solid white;
-  border-radius: 8px;
-  height: 10px;
-  right: -7px;
-  position: absolute;
-  margin-top: -7px;
-  width: 10px;
 }
