--- a/src/canvas/resize.css
+++ b/src/canvas/resize.css
@@ -3,74 +3,89 @@
   position: absolute;
   width: 20px;
   z-index: 100;
+  transform: translate(-50%, -50%);
 }
 
 .handle::before {
   content: "";
   background: #007CA5;
   border: 2px solid white;
-  border-radius: 8px;
-  height: 10px;
+  border-radius: 100%;
+  height: 12px;
+  width: 12px;
   left: 50%;
-  position: absolute;
-  margin-left: -6px;
-  margin-top: -6px;
   top: 50%;
-  width: 10px;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
 
 .handleLeft {
   cursor: ew-resize;
-  left: 0;
-  margin-left: -12px;
-  margin-top: -12px;
+  left: -1px;
   top: 50%;
 }
 
 .handleTop {
   cursor: ns-resize;
   left: 50%;
-  margin-left: -12px;
-  margin-top: -12px;
-  top: 0;
+  top: -1px;
 }
 
 .handleBottom {
-  bottom: 0;
+  top: calc(100% + 1px);
   cursor: ns-resize;
   left: 50%;
-  margin-left: -12px;
-  margin-bottom: -12px;
 }
 
 .handleRight {
   cursor: ew-resize;
-  margin-right: -12px;
-  margin-top: -12px;
-  right: 0;
+  left: calc(100% + 1px);
   top: 50%;
 }
 
 .cornerTopLeft {
   cursor: nwse-resize;
-  left: -11px;
-  top: -11px;
+  top: -1px;
+  left: -1px;
 }
 
 .cornerTopRight {
   cursor: nesw-resize;
-  right: -11px;
-  top: -11px;
+  left: calc(100% + 1px);
+  top: -1px;
 }
 
 .cornerBottomLeft {
-  bottom: -11px;
+  top: calc(100% + 1px);
   cursor: nesw-resize;
-  left: -11px;
+  left: -1px;
 }
 
 .cornerBottomRight {
-  bottom: -11px;
+  top: calc(100% + 1px);
   cursor: nwse-resize;
-  right: -11px;
+  left: calc(100% + 1px);
+}
+
+.rotateHandle {
+  background-color: #007CA5;
+  width: 2px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  height: 45px;
+  transform: translate(-50%, -100%)
+}
+
+.rotateHandle::before {
+  position: absolute;
+  content: "";
+  cursor: crosshair;
+  background-color: #007CA5;
+  border: 2px solid white;
+  border-radius: 100%;
+  height: 12px;
+  width: 12px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
